concord_macros/tests/trybuild/fail/codegen/reserved_bytes_wrong_arity.rs
use concord_macros::api;

api! {
    client ReservedBytesWrongArityApi { base "https://example.com" }

    GET Ping
        path ["ping"]
        -> Bytes<u8>
}

fn main() {}
